Docker Assignment/k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: express-service

spec:
  selector:
    app: express-frontend

  ports:
  - port: 3000
    targetPort: 3000
