Docker Assignment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assignment-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /submit
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 5000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: express-service
            port:
              number: 3000
